Add player movement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Industrial Grid</title>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="500" height="500"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
